# Tiny-Soft-Render

./: CMakeLists.txt  Draw.h  camera.h  core.h  main.cpp  mesh.h  pipeline.h  shader.h  v2f.h  vertex.h
src/: CMakeLists.txt  Draw.cpp  camera.cpp  mesh.cpp  pipeline.cpp  shader.cpp
